# skymap-test

./: .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CI_CD.md  CLAUDE.md  GEMINI.md  README.md  README_zh.md  TESTING.md  WARP.md  arena.pen  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: CLAUDE.md  app_control.rs  app_settings.rs  astro_events.rs  astronomy.rs  equipment.rs  http_client.rs  lib.rs  locations.rs  markers.rs  observation_log.rs  offline_cache.rs  rate_limiter.rs  security.rs  security_tests.rs  storage.rs  target_io.rs  target_list.rs  unified_cache.rs  updater.rs  utils.rs
src-tauri/src/astronomy/: CLAUDE.md  calculations.rs  events.rs  mod.rs
src-tauri/src/astronomy/calculations/: common.rs  coordinates.rs  formatting.rs  imaging.rs  mod.rs  moon.rs  sun.rs  time.rs  twilight.rs  (+2 more)
src-tauri/src/cache/: CLAUDE.md  mod.rs  offline.rs  unified.rs
src-tauri/src/data/: CLAUDE.md  equipment.rs  locations.rs  markers.rs  mod.rs  observation_log.rs  session_io.rs  storage.rs  target_io.rs  targets.rs
src-tauri/src/mount/: alpaca_client.rs  commands.rs  mod.rs  simulator.rs  types.rs
src-tauri/src/network/: CLAUDE.md  http_client.rs  mod.rs  rate_limiter.rs  security.rs
src-tauri/src/platform/: CLAUDE.md  app_control.rs  app_settings.rs  cli.rs  map_keys.rs  mod.rs  path_config.rs  plate_solver.rs  secret_bootstrap.rs  updater.rs
(+1545 files in other folders)
